Add icons with text section

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1,7 +1,4 @@
-body {
-  background-color: blue;
-  color: red;
-}
+
 .featured-row__subtext {
   color: red!important;
 }
@@ -10,6 +7,7 @@ body {
   border: 1px solid gray;
    padding: 25px;
   overflow: hidden;
+  border: 1px solid red;
 
 }
 .collection-slider .slick-track {
@@ -18,7 +16,7 @@ body {
 .collection-slider   .product-card {
     width: 100%;
     max-width: 300px;
-    border: 2px solid green;
+   
   }
 .collection-slider   .slick-prev {
     left: 0;
