--- a/templates/page.landingpage1.liquid
+++ b/templates/page.landingpage1.liquid
@@ -3,14 +3,16 @@
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
       <div class="section-header text-center">
         <h1>{{ page.title }}</h1>
-        <h1> This is a test page with Hero Section </h1>
-     
       </div>
 
       <div class="rte">
         {% section 'hero' %}
         {% section 'featured-blog' %}
         {{ page.content }}
+      </div>
+
+      <div>
+       {% section 'icons_with_text' %}
       </div>
     </div>
   </div>
