--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -78,6 +78,7 @@
     {{ base_font_bold_italic | font_face: font_display: 'swap' }}
   </style>
 
+ <script src= "{{'custom.js' |asset_url}}" defer = "defer"></script>
   <script>
     var theme = {
       breakpoints: {
