--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*============================================================================
-  Debut | Built with Shopify Slate
+  Custom Lights Theme | MZ 
 
   Some things to know about this file:
     - Sass is compiled on Shopify's server so you don't need to convert it to CSS yourself
@@ -1089,7 +1089,7 @@ textarea {
 /*================ #Basic Styles ================*/
 .page-width {
   *zoom: 1;
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto; }
   .page-width::after {
     content: '';
