--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -1,7 +1,8 @@
 <div class="page-width">
   {% if section.settings.title != blank %}
     <div class="section-header text-center">
-      <h2>{{ section.settings.title | escape }}</h2>
+      <h2 class="heading heading--2">SHOP</h2>
+      <h3 class="heading heading--3">{{ section.settings.title | escape }}</h3>
     </div>
   {% endif %}
 
@@ -12,7 +13,7 @@
       {%- assign max_height = 530 -%}
       {%- assign grid_item_width = 'medium-up--one-half' -%}
     {% when 3 %}
-      {%- assign max_height = 345 -%}
+      {%- assign max_height = 530 -%}
       {%- assign grid_item_width = 'small--one-half medium-up--one-third' -%}
     {% when 4 %}
       {%- assign max_height = 250 -%}
@@ -23,7 +24,7 @@
   {% endcase %}
 
   {%- assign product_limit = section.settings.grid | times: section.settings.rows -%}
-
+  
   <ul class="grid grid--uniform grid--view-items">
     {% for product in collection.products limit: product_limit %}
       <li class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
@@ -44,6 +45,7 @@
             <div class="h4 grid-view-item__title" aria-hidden="true">{{ 'homepage.onboarding.product_title' | t }}</div>
             {% include 'product-price' %}
           </div>
+         
         </li>
       {% endfor %}
     {% endfor %}
