--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -27,7 +27,7 @@
         {%- assign slide_width = section.settings.image.width -%}
       {%- endif -%}
       <div class="hero-fixed-width__content">
-        <div class="page-width text-center">
+        <div class="page-width">
           {%- if section.settings.title != blank -%}
             <h2 class="h1 mega-title{% if section.settings.text_size == 'large' %} mega-title--large{% endif %}">{{ section.settings.title | escape }}</h2>
           {%- endif -%}
@@ -86,9 +86,9 @@
       </div>
     {%- endif -%}
       <div class="hero__inner">
-        <div class="page-width text-center">
+        <div class="page-width">
           {%- if section.settings.title != blank -%}
-            <h2 class="h1 mega-title{% if section.settings.text_size == 'large' %} mega-title--large{% endif %}">{{ section.settings.title | escape }}</h2>
+            <h3 class="h1 mega-title{% if section.settings.text_size == 'large' %} mega-title--large{% endif %}">{{ section.settings.title | escape }}</h3>
           {%- endif -%}
           {%- if section.settings.text != blank -%}
             <div class="rte-setting mega-subtitle{% if section.settings.text_size == 'large' %} mega-subtitle--large{% endif %}">{{ section.settings.text }}</div>
