--- a/sections/product-template-custom.liquid
+++ b/sections/product-template-custom.liquid
@@ -151,7 +151,10 @@
               {%- endif -%}
             </div>
           {%- endif -%}
-
+      
+        
+        
+        <h1> test</h1>
           {% capture "form_classes" -%}
             product-form product-form-{{ section.id }}
             {%- if section.settings.enable_payment_button and product.has_only_default_variant %} product-form--payment-button-no-variants {%- endif -%}
