--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -3,9 +3,8 @@
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
       <div class="section-header text-center">
         <h1>{{ page.title }}</h1>
-        <h1> This is a PAGE template </h1>
       </div>
-      
+      <h2>Subtitle for page template</h2>
       <div class="rte">
         {{ page.content }}
       </div>
